hide sign up and log in button on nav for mobile to prevent wrap

--- a/css/style.css
+++ b/css/style.css
@@ -956,6 +956,12 @@ footer {
   .navbar-logIn {
     margin-right: 0px;
     margin-left: 20px; } }
+@media (max-width: 460px) {
+  .navbar-logInSm {
+    display: none !important; }
+
+  .navbar-signUp2 {
+    display: none !important; } }
 @media (max-width: 750px) {
   .customersInner .customer-logos img {
     width: 40px;
@@ -965,11 +971,7 @@ footer {
     width: 50% !important; }
 
   .topBannerInnerLeft h1 {
-    font-size: 3.5em !important; }
-
-  nav .EnergyDeckLogo {
-    width: 100px;
-    height: auto; } }
+    font-size: 3.5em !important; } }
 @media (max-width: 992px) {
   .customersInner .customer-logos {
     text-align: center; }
